Fixed fastlinks overlapping the mobile menu

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -221,6 +221,7 @@
     z-index: 35;
     background-color: #fffaf1;
     margin-top: 12rem;
+    margin-bottom: 4rem;
     padding: 3rem;
     overflow-y: auto;
 
